--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
 </head>
 <body>
 
-    <div id="settings-btn" class="setting-button">
+    <div id="settings-btn" class="setting-button" onclick="openSettingsModal()">
+        <img src="settings.png" alt="Settings" class="settings-icon">
+    </div>
 
+
+    <div id="settings-modal" class="modal">
+        <div class="modal-content">
+                <span class="close" onclick="closeSettingsModal()">&times;</span>
+                <h2 style="text-align: center;">Settings</h2>
+                <label for="new-city">Enter your new city:</label>
+                <input class="input-box-city" type="text" id="new-city" placeholder="Enter City Name">
+                <button class="change-city-btn" onclick="changeCity()">Change City</button>
+                <h3>Temperature Units:</h3>
+        <button id="toggle-units" class="toggle-units-btn" onclick="toggleTemperatureUnits()">Change to Celsius</button>
+
+        </div>
     </div>
 
     <div id="clock-time" class="clock-time">
@@ -16,7 +30,7 @@
     </div>
 
     <div id="weather" class="weather">
-        <h3>Weather</h3>
+        <h3 class="temperature" data-temperatureFahrenheit="0">Temperature: 0 °F</h3>
     </div>
     <div id="city-text" class="city-text">
         <h3>Location:</h3>
@@ -52,6 +66,48 @@
 
     updateClock();
     setInterval(updateClock, 1000);
+    
+ // Global variable to track temperature units
+let isCelsius = false; // Initially set to Fahrenheit
+
+// Function to toggle between Celsius and Fahrenheit
+function toggleTemperatureUnits() {
+    isCelsius = !isCelsius; // Toggle the units
+    const toggleButton = document.getElementById('toggle-units');
+
+    if (isCelsius) {
+        // Switch to Celsius
+        toggleButton.textContent = 'Change to Fahrenheit';
+        // Call a function to convert and update temperatures to Celsius
+        convertAndDisplayTemperaturesToCelsius();
+    } else {
+        // Switch to Fahrenheit
+        toggleButton.textContent = 'Change to Celsius';
+        // Call a function to convert and update temperatures to Fahrenheit
+        convertAndDisplayTemperaturesToFahrenheit();
+    }
+}
+
+function convertAndDisplayTemperaturesToCelsius() {
+    const temperatureElements = document.querySelectorAll('.temperature');
+
+    temperatureElements.forEach((element) => {
+        const temperatureInFahrenheit = parseFloat(element.getAttribute('data-temperatureFahrenheit'));
+        const temperatureInCelsius = Math.round((temperatureInFahrenheit - 32) * (5 / 9)); // Round to the nearest whole number
+        element.textContent = `Temperature: ${temperatureInCelsius} °C`;
+    });
+}
+
+function convertAndDisplayTemperaturesToFahrenheit() {
+    const temperatureElements = document.querySelectorAll('.temperature');
+
+    temperatureElements.forEach((element) => {
+        const temperatureInCelsius = parseFloat(element.getAttribute('data-temperatureCelsius'));
+        const temperatureInFahrenheit = Math.round((temperatureInCelsius * 9 / 5) + 32); // Round to the nearest whole number
+        element.textContent = `Temperature: ${temperatureInFahrenheit} °F`;
+    });
+}
+
 
     function getUserLocation() {
         return fetch('https://ipinfo.io?token=cc98be8f188a9a')
@@ -73,7 +129,7 @@
     const weatherElement = document.querySelector('.weather');
     const cityElement = document.querySelector('.city-text');
     const apiKey = "c152eb69aece48a8817210931232509"; // Replace with your actual WeatherAPI API key
-    const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&temp_f`;
+    const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}`;
 
     fetch(apiUrl)
         .then(response => {
@@ -84,10 +140,11 @@
         })
         .then(data => {
             if (data.current) {
-                const temperature = Math.round(data.current.temp_f);
-                const description = data.current.condition.text;
+                const temperatureFahrenheit = Math.round(data.current.temp_f);
+                const temperatureCelsius = Math.round(data.current.temp_c);
 
-                weatherElement.innerHTML = `<h3>Temperature: ${temperature} °F</h3>`;
+                // Store both Fahrenheit and Celsius temperatures in data attributes
+                weatherElement.innerHTML = `<h3 class="temperature" data-temperatureFahrenheit="${temperatureFahrenheit}" data-temperatureCelsius="${temperatureCelsius}">Temperature: ${temperatureFahrenheit} °F</h3>`;
                 cityElement.innerHTML = `<h3>Location: ${city}, ${country}</h3>`;
             } else {
                 console.error('Error fetching weather data: Invalid API response');
@@ -97,6 +154,7 @@
             console.error('Error fetching weather data:', error);
         });
 }
+
 getUserLocation().then(location => {
     if (location) {
         updateWeather(location.city, location.country);
@@ -114,5 +172,77 @@ setInterval(() => {
         }
     });
 }, 1800000);
+</script>
+
+<script>
+    // Function to open the settings modal
+function openSettingsModal() {
+    const modal = document.getElementById('settings-modal');
+    modal.style.display = 'block';
+}
+
+// Function to close the settings modal
+function closeSettingsModal() {
+    const modal = document.getElementById('settings-modal');
+    modal.style.display = 'none';
+}
+
+// Function to change the city and update time, weather, and location
+function changeCity() {
+    const newCity = document.getElementById('new-city').value;
+    if (newCity) {
+        // Close the modal
+        closeSettingsModal();
+
+        // Update the city in the UI
+        const cityElement = document.querySelector('.city-text');
+        cityElement.innerHTML = `<h3>Location: ${newCity}</h3>`;
+
+        // Fetch weather and time for the new city (you'll need to modify your code)
+        // Example: getUserLocation().then(location => updateWeatherAndTime(newCity, location.country));
+    }
+}
+function changeCity() {
+    const newCity = document.getElementById('new-city').value;
+    if (newCity) {
+        // Close the modal
+        closeSettingsModal();
+
+        // Fetch weather data for the new city
+        fetchWeather(newCity);
+    }
+
+    function fetchWeather(city) {
+    const apiKey = "c152eb69aece48a8817210931232509"; // Replace with your actual WeatherAPI API key
+    const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}`;
+
+    fetch(apiUrl)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            if (data.current) {
+                const temperature = Math.round(data.current.temp_f);
+                const description = data.current.condition.text;
+
+                // Update the temperature in the UI
+                const weatherElement = document.querySelector('.weather');
+                weatherElement.innerHTML = `<h3 class="temperature" data-temperatureFahrenheit="${temperature}">Temperature: ${temperature} °F</h3>`;
+
+                // Update the city in the UI
+                const cityElement = document.querySelector('.city-text');
+                cityElement.innerHTML = `<h3>Location: ${city}</h3>`;
+            } else {
+                console.error('Error fetching weather data: Invalid API response');
+            }
+        })
+        .catch(error => {
+            console.error('Error fetching weather data:', error);
+        });
+}
+}
 </script>
 </html>
