--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock Tab</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <meta property="og:title" content="Clock Tab">
+    <meta property="og:description" content="Stay up-to-date with the time and weather in your city with the Clock Tab. Customize settings, check the temperature, and more.">
 </head>
 <body>
 
