--- a/index.html
+++ b/index.html
@@ -247,4 +247,33 @@ function changeCity() {
 }
 }
 </script>
+
+<script>
+        function updateTabTitle() {
+            const currentTime = new Date();
+            let hours = currentTime.getHours();
+            const minutes = currentTime.getMinutes().toString().padStart(2, '0');
+            const seconds = currentTime.getSeconds().toString().padStart(2, '0');
+            let ampm = 'AM';
+
+            if (hours > 12) {
+                hours -= 12;
+                ampm = 'PM';
+            }
+
+            if (hours === 0) {
+                hours = 12;
+            }
+
+            const timeString = `${hours}:${minutes} ${ampm}`;
+            document.title = timeString; // Set the tab title to the current time
+        }
+
+        // Call the function to update the tab title initially
+        updateTabTitle();
+
+        // Set an interval to update the tab title every second
+        setInterval(updateTabTitle, 1000);
+</script>
+
 </html>
