--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </select>
 
 
-        <a href="Clock-Tab/updates/updates.html" class="dev-notes" target="_blank">Upcoming Updates</a>
+        <a href="updates/updates.html" class="dev-notes" target="_blank">Upcoming Updates</a>
         </div>
     </div>
 
